--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 reqwest-eventsource = "0.4.0"
 tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
 futures = "0.3.21"
+serde = "1.0.136"
+serde_json = "1.0.79"
+serde_derive = "1.0.136"
